# brault

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/brault/: __init__.py  backup.py  cli.py  encryption.py  files.py  restore.py  utils.py
tests/: conftest.py  test_basic.py  test_integration.py
